--- a/packages/neutrino/package.json
+++ b/packages/neutrino/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "neutrino",
+  "name": "@offgrid/neutrino",
   "version": "9.0.0-0",
   "description": "Create and build JS applications with managed configurations",
   "main": "index.js",
@@ -25,10 +25,10 @@
     "yarn": ">=1.2.1"
   },
   "dependencies": {
-    "deepmerge": "^1.5.2",
+    "deepmerge": "^2.1.1",
     "is-plain-object": "^2.0.4",
     "lodash.clonedeep": "^4.5.0",
-    "webpack-chain": "^4.8.0",
-    "yargs": "^12.0.0"
+    "webpack-chain": "OffGridNetworks/webpack-chain#patch-resolve-plugins",
+    "yargs": "^12.0.1"
   }
 }
